--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 
     <div class="social-media-link">
       <a href="https://www.youtube.com/">
-        <img src="./instagram.png" alt="" />
+        <img src="instagram.png" alt="" />
       </a>
       <a href="https://github.com/RoyalDani12">
         <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="" />
       </a>
       <a href="#">
-        <img src="./linkedin.png" alt="" />
+        <img src="linkedin.png" alt="" />
       </a>
       <a href="https://t.me/RoyalDani">
-        <img src="./telegram.png" alt="" />
+        <img src="telegram.png" alt="" />
       </a>
     </div>
 
@@ -145,12 +145,13 @@
   <footer class="footer">
     <p>&copy; 2025 DaniRoyal. All rights reserved.</p>
     <div class="contact" id="conection">
-      <a href=""><img src="./instagram.png" alt="" id="icons-image" /></a>
-      <a href=""><img src="./linkedin.png" alt="" id="icons-image" /></a>
-      <a href=""><img src="./telegram.png" alt="" id="icons-image" /></a>
+      <a href=""><img src="instagram.png" alt="" id="icons-image" /></a>
+      <a href=""><img src="linkedin.png" alt="" id="icons-image" /></a>
+      <a href=""><img src="telegram.png" alt="" id="icons-image" /></a>
       <a href="https://github.com/RoyalDani12"><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="" id="icons-image" /></a>
     </div>
   </footer>
 </body>
 </html>
+
 
