--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="social-media-link">
       <a href="https://www.youtube.com/">
-        <img src="instagram.png" alt="" />
+        <img src="instagram - Copy.png" alt="" />
       </a>
       <a href="https://github.com/RoyalDani12">
         <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="" />
@@ -142,25 +142,18 @@
     </section>
   </main>
 
- <footer class="footer">
-  <p>&copy; 2025 DaniRoyal. All rights reserved.</p>
-  <div class="contact" id="conection">
-    <a href="https://instagram.com/" target="_blank">
-      <i class="fab fa-instagram"></i>
-    </a>
-    <a href="https://linkedin.com/" target="_blank">
-      <i class="fab fa-linkedin"></i>
-    </a>
-    <a href="https://t.me/" target="_blank">
-      <i class="fab fa-telegram"></i>
-    </a>
-    <a href="https://github.com/RoyalDani12" target="_blank">
-      <i class="fab fa-github"></i>
-    </a>
-  </div>
-</footer>
+<footer class="footer">
+    <p>&copy; 2025 DaniRoyal. All rights reserved.</p>
+    <div class="contact" id="conection">
+      <a href=""><img src="instagram.png" alt="" id="icons-image" /></a>
+      <a href=""><img src="linkedin.png" alt="" id="icons-image" /></a>
+      <a href=""><img src="telegram.png" alt="" id="icons-image" /></a>
+      <a href="https://github.com/RoyalDani12"><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="" id="icons-image" /></a>
+    </div>
+  </footer>           
 </body>
 </html>
+
 
 
 
