--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 
     <div class="social-media-link">
       <a href="https://www.instagram.com/winerneverloss?igsh=eXB6NGQ2dDA1bjYy">
-        <img src="icons/instagram.png" alt="" />
+        <img src="instagram.png" alt="" />
       </a>
       <a href="https://github.com/RoyalDani12">
         <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="" />
       </a>
       <a href="#">
-        <img src="icons/linkedin.png" alt="" />
+        <img src="linkedin.png" alt="" />
       </a>
       <a href="https://t.me/RoyalDani">
-        <img src="icons/telegram.png" alt="" />
+        <img src="telegram.png" alt="" />
       </a>
     </div>
 
@@ -159,3 +159,4 @@
   </footer>
 </body>
 </html>
+
